updated json package

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.17.1",
     "mongoose": "^5.11.8",
     "monk": "^7.3.2",
+    "nes.css": "^2.3.0",
     "nodemon": "^2.0.6"
   }
 }
