--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "live-server": "^1.2.1",
     "mongoose": "^5.11.8",
     "monk": "^7.3.2",
     "nes.css": "^2.3.0",
